# routes/users.js
@@ -1,17 +1,25 @@
 const express = require('express');
 const router = express.Router();
 const userController = require('../controllers/userController');
+const authController = require('../controllers/authController');
 const validate = require('../validators');
+const authenticateToken = require('../middleware/auth');
 
 router.get(
   '/',
-  /* #swagger.tags = ['Users'] */
+  authenticateToken,
+  /* #swagger.tags = ['Users']
+     #swagger.security = [{ "BearerAuth": [] }]
+  */
   userController.getUsers
 );
 
 router.get(
   '/:id',
-  /* #swagger.tags = ['Users'] */
+  authenticateToken,
+  /* #swagger.tags = ['Users']
+     #swagger.security = [{ "BearerAuth": [] }]
+  */
   userController.getUserById
 );
 
@@ -29,9 +37,12 @@ router.post(
   validate.checkCreateUserData,
   userController.createUser
 );
+
 router.put(
   '/:id',
+  authenticateToken,
   /* #swagger.tags = ['Users']
+     #swagger.security = [{ "BearerAuth": [] }]
      #swagger.parameters['id'] = {
        in: 'path',
        description: 'MongoDB ObjectId of the user',
@@ -51,8 +62,45 @@ router.put(
 );
 router.delete(
   '/:id',
-  /* #swagger.tags = ['Users'] */
+  authenticateToken,
+  /* #swagger.tags = ['Users']
+     #swagger.security = [{ "BearerAuth": [] }]
+  */
   userController.deleteUser
+);
+
+router.post(
+  '/register',
+  /* #swagger.tags = ['Auth']
+     #swagger.parameters['user'] = {
+       in: 'body',
+       description: 'Register new user',
+       required: true,
+       schema: { $ref: '#/definitions/User' }
+     }
+  */
+  validate.createUserValidator(),
+  validate.checkCreateUserData,
+  authController.register
+);
+
+router.post(
+  '/login',
+  /* #swagger.tags = ['Auth']
+     #swagger.parameters['credentials'] = {
+       in: 'body',
+       description: 'User login credentials',
+       required: true,
+       schema: { username: 'string', password: 'string' }
+     }
+  */
+  authController.login
+);
+
+router.post(
+  '/logout',
+  /* #swagger.tags = ['Auth'] */
+  authController.logout
 );
 
 module.exports = router;
